--- a/java.css
+++ b/java.css
@@ -15,6 +15,7 @@ body, html{
 header
 {
     min-height: 100vh;
+    /* height: 100vh; */
     width: 100%;
     background-image: linear-gradient(rgba(2, 12, 22, 0.7),rgba(2, 28, 35, 0.7)),url(images/th.jpeg);
     /* background-color: #0D3159; */
@@ -56,7 +57,6 @@ nav{
 .nav_image h3:hover::after{
     width: 100%;
 }
-
 
 nav img
 {
@@ -104,7 +104,7 @@ aside{
     width: 18vw;
     /* height: calc(100vh - 50px); */
     /* height: 100vw; */
-    height: 5200px;
+    height: 100vh;
     /* padding-left: 20px; */
     padding-top: 15px;
     background-color: gainsboro;
@@ -138,8 +138,6 @@ aside ul li:hover{
     transition: all 0.5s;
 }
 
-
-
 .contento{
     width: calc(100vw - 18vw);
     height: 100vh;
@@ -148,4 +146,146 @@ aside ul li:hover{
     left: 280px;
     padding-left: 10px;
     /* overflow:; */
+}
+
+/* .nav-links
+{
+    flex: 1;
+    text-align: right;
+}
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+
+}
+.nav-links ul li a{
+    color: white;
+    text-decoration: none;
+    font-size:  16px;
+    font-weight: 600;
+    
+}
+i{
+    color: white;
+    font-size: 25px;
+}
+.nav-links ul li::after
+{
+    content: '';
+    width: 0%;
+    height: 3px;
+    background: crimson;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+
+}
+.nav-links ul li:hover::after{
+    width: 100%;
+} */
+
+nav .fa
+{
+    display: none;
+}
+
+.ra{
+    display: none;
+}
+
+
+
+@media (max-width: 600px)
+{
+    nav .fa{
+        display: block;
+        color: white;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+     .ra{
+        display: block;
+    }
+    .nav_image{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: white;
+        font-size: 12px;
+        cursor: pointer;
+        font-family: 'Lexend Giga', sans-serif;
+        
+    }
+    nav img
+    {
+        width: 35px;
+    }
+    aside {
+        width: 22vw;
+        /* height: calc(100vh - 50px); */
+        /* height: 100vw; */
+        height: 5200px;
+        /* padding-left: 20px; */
+        padding-top: 15px;
+        background-color: gainsboro;
+        overflow: hidden;
+        margin-right: 10px;
+        /* padding-right: 10px; */
+    }
+    aside ul li {
+        text-decoration: none;
+        width: 100%;
+        /* color: #020A43; */
+        color: #020A43;
+        font-size: 2%;
+        font-weight: 900;
+        padding: 5px 0;
+        padding-left: 5px;
+        
+    }
+    nav {
+        display: flex;
+        padding: 0.8% 1%;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #020A43;
+    }
+    .nav-links ul li
+    {
+       display: block; 
+
+    }
+    .nav-links{
+        position: absolute;
+        background: crimson;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+    }
+    nav .fa{
+        display: block;
+        color: white;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    .nav-links ul {
+        padding: 30px;
+    }
+    .contento {
+        /* width: calc(100vw - 40vw); */
+        width: 78vw;
+        height: 100vh;
+        position: absolute;
+        top: 60px;
+        left: 20vw;
+        padding-left: 10px;
+    }
+   
 }
