--- a/style.css
+++ b/style.css
@@ -626,6 +626,9 @@ ul{
     {
         width: 30px;
     }
+    /* .nav-image h3{
+        font-size: 10px;
+    } */
     .text-box
     {
         width: 90%;
