--- a/syllabus.css
+++ b/syllabus.css
@@ -8,3 +8,16 @@ h1, h2, h3{
 h3{
     font-size: 21px;
 }
+
+@media (max-width: 600px) {
+    h3 {
+        font-size: 17px;
+    }
+    h1, h2, h3 {
+        color: white;
+        text-align: center;
+        /* width: 95vw; */
+        line-height: 35px;
+        font-size: 18px;
+    }
+}
