--- a/php/comman.css
+++ b/php/comman.css
@@ -2,10 +2,39 @@
     margin: 0;
     padding: 0;
 }
+li{
+    height: 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1vw;
+    
+    color: #020A43;
+}
 
-pre
-{
-    font-size: 20px;
+a{
+    width: 97%;
+    height: 90%;
+    display: flex;
+    padding-left: 0.5vw;
+    align-items: center;
+    /* justify-content: ; */
+    border: 2px solid black;
+    border-radius: 0.5vw;
+    text-decoration: none;
+    font-size: 25px;
+    color: #020A43;
+    transition: all 0.4s ease-in-out;
+    
+}
+a:hover{
+    background-color: #f1f2fb;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    /* font-size: 27px; */
+    color: #020A43;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.29);
 }
 h1{
     color:#020A43;
