--- a/java/comman.css
+++ b/java/comman.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
 }
 li{
-    height: 4vw;
+    /* height: 3.5vw; */
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 3vw 0;
+    margin: 2vw 0;
     
     color: #020A43;
 }
@@ -17,14 +18,14 @@ a{
     width: 97%;
     height: 90%;
     display: flex;
-    padding: 1vw 0;
+    padding: 1.5vw 0;
     padding-left: 0.5vw;
     align-items: center;
     /* justify-content: ; */
     border: 2px solid black;
     border-radius: 0.5vw;
     text-decoration: none;
-    font-size: 1.8vw;
+    font-size: 2vw;
     color: #020A43;
     transition: all 0.4s ease-in-out;
     
