--- a/java/comman.css
+++ b/java/comman.css
@@ -5,11 +5,11 @@
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
 }
 li{
-    /* height: 3.5vw; */
+    height: 4vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 2vw 0;
+    margin: 3vw 0;
     
     color: #020A43;
 }
@@ -18,18 +18,19 @@ a{
     width: 97%;
     height: 90%;
     display: flex;
-    padding: 1.5vw 0;
+    padding: 1vw 0;
     padding-left: 0.5vw;
     align-items: center;
     /* justify-content: ; */
     border: 2px solid black;
     border-radius: 0.5vw;
     text-decoration: none;
-    font-size: 2vw;
+    font-size: 1.8vw;
     color: #020A43;
     transition: all 0.4s ease-in-out;
     
 }
+
 a:hover{
     background-color: #f1f2fb;
     width: 100%;
