--- a/style.css
+++ b/style.css
@@ -257,8 +257,9 @@ nav .fa
 
 .box:hover
 {
-    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.8);
+    /* box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.8); */
     /* margin: 40px; */
+    transform: scale(1.1);
 }
 .box_head{
     display: flex;
